improve friends UI/UX